# Athena

./: .gitmodules  README.md  REUSE.toml  build.gradle.kts  crowdin.yml  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/cpu/: CMakeLists.txt  CpuInfoUtils.cpp  CpuJni.cpp  CpuJni.h  CpuUtils.cpp  logging.h
app/src/main/cpp/vulkan/: CMakeLists.txt  VkUtils.cpp
app/src/main/cpp/vulkan/vulkan_wrapper/: vulkan_wrapper.h
core/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
fastlane/: Appfile
gradle/: libs.versions.toml
module-audio/: build.gradle.kts
module-biometrics/: build.gradle.kts
module-bluetooth/: build.gradle.kts
module-build/: build.gradle.kts
module-camera/: build.gradle.kts
module-cpu/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
module-device/: build.gradle.kts
module-display/: build.gradle.kts
module-drm/: build.gradle.kts
module-gnss/: build.gradle.kts
module-gpu/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
module-health/: build.gradle.kts  consumer-rules.pro
module-input/: build.gradle.kts
module-lights/: build.gradle.kts
module-media/: build.gradle.kts
module-nfc/: build.gradle.kts
module-packages/: build.gradle.kts
module-ril/: build.gradle.kts
module-security/: build.gradle.kts
module-sensors/: build.gradle.kts
module-services/: build.gradle.kts
module-storage/: build.gradle.kts  proguard-rules.pro
module-systemproperties/: build.gradle.kts
module-thermal/: build.gradle.kts
module-treble/: build.gradle.kts
(+637 files in other folders)
